test/files/neg/t4889.check
t4889.scala:19: error: implicit error;
!I ma1: MatrixAdder[Int, SparseMatrix[?]]
  m1.foo
     ^
1 error
